tests/fixtures/valid/no_runtime/freestanding_arena_alloc.lby
# Static-buffer arenas in the freestanding tier (freestanding_tier_design.md §5).
#
# A `no-runtime` module has nowhere bounded to put data: `alloc`, `list`, `map`,
# `string` and `rc` are all L0441-rejected, by design — each needs the host
# allocator a kernel does not have. A static-buffer arena is the answer: the
# memory is a fixed `array<i64>` THE CALLER ALREADY OWNS, and allocation is a
# bump cursor within it. No allocator is involved at any point, which is exactly
# why the L0441 gate does not (and must not) reject this file.
#
# The arena bumps in 8-byte CELLS, not bytes, and the buffer is `array<i64>`,
# because `arena_alloc` yields a `ptr<T>` for an 8-byte pointee: the buffer's
# element width and the returned pointer's stride must agree. This is NOT because
# narrow arrays are unpacked — they are packed at their C width and `addr_of` into
# one lowers; only narrow *scalars* are still 8-byte cells. See §5's delivery
# record.
#
# RUNS ON ALL FOUR TIERS, all agreeing on 109. There is nothing here only native
# can do: an arena cell is an ordinary `array<i64>` element, so `arena_alloc(r, n)`
# is exactly `addr_of(buf[cursor])` plus an integer cursor — which the interpreters
# already model. (An earlier version refused it on the interpreters with L0460,
# claiming their pointer model could not reinterpret a buffer's storage. Nothing
# was being reinterpreted; L0460 is now the arena OVERFLOW diagnostic.)
no-runtime

# Bump two cells out of a caller-owned buffer, write through the returned
# pointers, and read them back. This is the whole point of the feature: bounded,
# allocator-free storage a driver can actually use.
fn two_cells -> i64
    let buf array<i64> = [0, 0, 0, 0, 0, 0, 0, 0]
    region scratch in buf
    unsafe
        let a ptr<i64> = arena_alloc(scratch, 1)
        let b ptr<i64> = arena_alloc(scratch, 1)
        ptr_write(a, 30)
        ptr_write(b, 12)
        # Distinct allocations must not alias: 30 + 12 == 42.
        ptr_read(a) + ptr_read(b)

# The arena composes with a loop: bump one cell per iteration and walk the
# result back through the returned pointer.
fn loop_sum -> i64
    let buf array<i64> = [0, 0, 0, 0, 0, 0, 0, 0]
    region pool in buf
    let total i64 = 0
    let i i64 = 0
    while i < 4
        unsafe
            let cell ptr<i64> = arena_alloc(pool, 1)
            ptr_write(cell, i * 10)
            total += ptr_read(cell)
        i += 1
    # 0 + 10 + 20 + 30 == 60
    total

# A multi-cell request, walked with ptr_offset — the delivered kernel idiom.
fn block -> i64
    let buf array<i64> = [0, 0, 0, 0, 0, 0, 0, 0]
    region pool in buf
    unsafe
        let p ptr<i64> = arena_alloc(pool, 3)
        ptr_write(p, 1)
        ptr_write(ptr_offset(p, 1), 2)
        ptr_write(ptr_offset(p, 2), 4)
        ptr_read(p) + ptr_read(ptr_offset(p, 1)) + ptr_read(ptr_offset(p, 2))

fn main -> i64
    # 42 + 60 + 7 == 109
    two_cells() + loop_sum() + block()
