tests/fixtures/invalid/no_runtime/arena_backing_wrong_type.lby
# L0445: a static-buffer arena must be backed by a fixed `array<i64>`.
#
# The arena bumps in 8-byte CELLS because `arena_alloc` yields a `ptr<T>` for an
# 8-byte pointee, so the buffer's element width and the returned pointer's stride
# must agree. (NOT because narrow arrays are unpacked — they are packed at their C
# width, and `addr_of` into one lowers.) A scalar is not a buffer at all, so there
# is nothing to carve.
no-runtime

fn bad -> i64
    let notabuffer i64 = 7
    region scratch in notabuffer
    unsafe
        let p ptr<i64> = arena_alloc(scratch, 1)
        ptr_write(p, 1)
        ptr_read(p)

fn main -> i64
    bad()
